# face-openvino

./: CMakeLists.txt  README.md
demo/: face_detect.cpp
include/: baseface.hpp  facedetector.hpp  insightface.hpp
src/: baseface.cpp  facedetector.cpp  insightface.cpp
